--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-This is the footer. Include anything you'd like here, like a link to an <a class="internal-link" href="/about">About</a> page.
+That's all folks! Find out more about me here: <a class="internal-link" href="/about">Snowy Epistles</a>
