--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,2 @@
-That's all folks! Find out more about me here: <a class="internal-link" href="/about">Snowy Epistles</a>. Garden template from: [Maxime Vaillancourt](https://github.com/maximevaillancourt/digital-garden-jekyll-template).
+That's all folks! Find out more about me here: <a class="internal-link" href="/about">Snowy Epistles</a>. 
+Garden template from:  <a class="http" href="https://github.com/maximevaillancourt/digital-garden-jekyll-template">Maxime Vaillancourt</a>.
