--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 That's all folks! 
 Find out more about me here: <a class="internal-link" href="/about">Snowy Epistles</a>. 
-On digital gardens a <a class="internal-link" href="/_pages/Digital Garden TOS.md">Terms of Service</a>.
+On digital gardens a <a class="internal-link" href="/_pages/Digital Garden TOS">Terms of Service</a>.
 Garden template from:  <a class="http" href="https://github.com/maximevaillancourt/digital-garden-jekyll-template">Maxime Vaillancourt</a>.
