--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  {% include head.html %}
-  <body>
-    <nav>{% include nav.html %}</nav>
-    <div class="wrapper">
-      <main>{{ content }}</main>
-      <footer>{% include footer.html %}</footer>
-    </div>
-
-    {% include link-previews.html wrapperQuerySelector="content" %}
-  </body>
+<!DOCTYPE HTML>
+<html lang=en>
+    {% include head.html %}
+    <body>
+        <div id="container">
+            {{ content }}
+        </div>
+    </body>
 </html>
