--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,12 @@
 ---
 layout: default
 ---
-
-<content>
-  {{ content }}
-</content>
+<div id="content">
+	<div class="post">
+		<h2><a href="{{ site.github.url }}/">{{ site.title }}</a>: <b>{{ page.title }}</b></h2>
+		<div class="entry">
+			{{ content }}
+		</div>
+	</div>
+</div>
+{% include footer.html %}
