--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ This theme is uncopyrighted, free, and offered as is.
 
 body {
 	background: #fff;
-	font: 20px Hoefler Text, "Times New Roman", Times, serif;
+	font: 20px Helvetica, "Helvetica", Helvetica, sans-serif;
 	color: #333;
         line-height: 30px;
 	}
@@ -20,7 +20,7 @@ body {
 h1 {font-family: Helvetica, sans-serif; font-size: 1em; color:#333; font-weight:normal;  padding: 20px 0px 0px 0px;}
 h2 {font-family: Helvetica, sans-serif; font-size: 1.5em; color:#333; line-height:26px; font-weight:normal; padding: 5px 0px 10px 0px;}
 h3 {font-family: Helvetica, sans-serif; font-size: 18px; color:#666; line-height: 15px; text-indent: 0px; padding: 10px 0px 0px 0px;}
-h4 {font-family: Georgia, "Times New Roman", Times, serif; font-size: 1em; color:#000000;}
+h4 {font-family: Helvetica, "Helvetica", Helvetica, sans-serif; font-size: 1em; color:#000000;}
 h5 {font-size: 9pt; color:#000000;}
 
 img{border:none;}
@@ -46,7 +46,7 @@ li{line-height: 30px; padding: 6px 0 0 0;}
 .entry a:link {color: #303030; text-decoration: none; border-width: 0 0 1px 0; border-style: none none solid none; border-color: #C0C0C0;}
 .entry a:visited {color: #303030; text-decoration: none; border-width: 0 0 1px 0; border-style: none none solid none; border-color: #C0C0C0;}
 .entry a:hover {color: #999; border-width: 0 0 1px 0; border-style: none none solid none; border-color: #C0C0C0; text-decoration: none;}
-.entry strong, .entry em {font-family: Georgia, "Times New Roman", Times, serif; font-weight: bold; color: #555555;}
+.entry strong, .entry em {font-family: Helvetica, "Helvetica", Helvetica, sans-serif; font-weight: bold; color: #555555;}
 
 #footer {margin-left:115px}
 #footer {background:#fff; clear: both;}
@@ -58,8 +58,8 @@ li{line-height: 30px; padding: 6px 0 0 0;}
 #arc {float: right; width:530px; overflow: hidden; margin-top:0px; margin-left:14px; margin-right:14px; margin-bottom:24px;}
 .arc p{color:#666; font-family: 'Verdana, sans-serif; font-size: 12px; font-weight: normal !important;}
 
-.year th{color:#666; font-family: Verdana, sans-serif; font-size: 22px; font-weight: bold;}
-.arctitle {color:#666; font-family: 'Verdana, sans-serif; font-size: 12px; font-weight: normal;}
-.arctitle th {color:#999; font-family: 'Verdana, sans-serif; font-size: 14px; font-weight: normal;}
+.year th{color:#666; font-family: Helvetica, sans-serif; font-size: 22px; font-weight: bold;}
+.arctitle {color:#666; font-family: 'Helvetica, sans-serif; font-size: 12px; font-weight: normal;}
+.arctitle th {color:#999; font-family: 'Helvetica, sans-serif; font-size: 14px; font-weight: normal;}
 .arc2 {color:#999; font-family: 'Helvetica, sans-serif; font-size: 12px; font-weight: normal !important;}
 .arc2 th {color:#999; font-family: 'Helvetica, sans-serif; font-size: 12px; font-weight: normal !important;}
