--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,5 +5,7 @@
         <div id="container">
             {{ content }}
         </div>
+        
+    {% include link-previews.html wrapperQuerySelector="content" %}
     </body>
 </html>
