--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang=en>
     {% include head.html %}
     <body>
+        <nav>{% include nav.html %}</nav>
         <div id="container">
             {{ content }}
         </div>
