--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,5 +8,7 @@
         </div>
         
     {% include link-previews.html wrapperQuerySelector="content" %}
+        
+   <footer>{% include footer.html %}</footer>
     </body>
 </html>
