--- a/_includes/link-previews.html
+++ b/_includes/link-previews.html
@@ -1,7 +1,8 @@
 <!-- That file is not particularly elegant. This will need a refactor at some point. -->
 <style>
   content a.internal-link {
-    border-color: #8b88e6;
+    border-color: #fff;
+    background-color: #fff;
   }
 
   #tooltip-wrapper {
