--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,13 @@
-<!DOCTYPE HTML>
-<html lang=en>
-    {% include head.html %}
-    <body>
-        <div id="container">
-            {{ content }}
-        </div>
-        
+<!DOCTYPE html>
+<html lang="en">
+  {% include head.html %}
+  <body>
+    <nav>{% include nav.html %}</nav>
+    <div class="wrapper">
+      <main>{{ content }}</main>
+      <footer>{% include footer.html %}</footer>
+    </div>
+
     {% include link-previews.html wrapperQuerySelector="content" %}
-        
-    </body>
+  </body>
 </html>
